--- a/CONFIG
+++ b/CONFIG
@@ -13,7 +13,8 @@ OPTIM= -O3
 PREP_DIR = '-DPREP_DIR="Player-Data/"'
 
 # set this to configure extension flags
-EXT_FLAGS = '-DEXTENDED_SPDZ_GFP -DEXTENDED_SPDZ_GF2N'
+#EXT_FLAGS = '-DEXTENDED_SPDZ_GFP -DEXTENDED_SPDZ_GF2N'
+EXT_FLAGS = '-DEXTENDED_SPDZ_GFP'
 
 # set for 128-bit GF(2^n) and/or OT preprocessing
 USE_GF2N_LONG = 0
